--- a/scss/plugins/_index.scss
+++ b/scss/plugins/_index.scss
@@ -1,5 +1,5 @@
 //- Bootstrap
-// @import "./bootstrap/bootstrap";
+@import "./bootstrap/bootstrap";
 //- Fontawesome
 // @import "../../node_modules/font-awesome/scss/font-awesome";
 //- Simptip tooltip
