--- a/src/_includes/components/section-advantages.pug
+++ b/src/_includes/components/section-advantages.pug
@@ -1,31 +1,33 @@
 mixin section-advantages()
-  section.section-advantages
-    .section-advantages__wrapper.wrapper
-      .section-advantages__header
-        .section-advantages__title We’re the best in the business.
-        .section-advantages__subtitle We studied at the Swedish-Ukrainian school Beetroot Academy for 4 months
-      .section-advantages__row
-        .section-advantages__column
-          .item-advantages
-            svg.icon-check-mark.item-advantages__icon
-              use(xlink:href="#icon-check-mark")
-            .item-advantages__title Lifetime Warranty
-            .item-advantages__text All our products — whether we make them or not — are backed by lifetime warranty.
-        .section-advantages__column
-          .item-advantages
-            svg.icon-shopping-cart.item-advantages__icon
-              use(xlink:href="#icon-shopping-cart")
-            .item-advantages__title Shopping Experience
-            .item-advantages__text All our products — whether we make them or not — are backed by our lifetime warranty.
-        .section-advantages__column
-          .item-advantages
-            svg.icon-delivery-truck-1.item-advantages__icon
-              use(xlink:href="#icon-delivery-truck-1")
-            .item-advantages__title On-time Delivery
-            .item-advantages__text All our products — whether we make them or not — are backed by our lifetime warranty.
-        .section-advantages__column
-          .item-advantages
-            svg.icon-chat.item-advantages__icon
-              use(xlink:href="#icon-chat")
-            .item-advantages__title Best in Class Service
-            .item-advantages__text All our products — whether we make them or not — are backed by our lifetime warranty.
+  section.c-section-advantages
+    .c-section-advantages__wrapper.wrapper
+      .c-section-advantages__header
+        h2.c-section-advantages__title We’re the best in the business. 
+        h6.c-section-advantages__subtitle We studied at the Swedish-Ukrainian school Beetroot Academy for 4 months
+      ul.c-section-advantages__content
+        li.c-section-advantages__item
+          +advantageItem({
+            title: "Lifetime Warranty",
+            text: "All our products — whether we make them or not — are backed by lifetime warranty."
+          })
+        li.c-section-advantages__item
+          +advantageItem({
+            svg: "shopping-cart",
+            svgMode: "red",
+            title: "Shopping Experience",
+            text: "All our products — whether we make them or not — are backed by lifetime warranty."
+          })
+        li.c-section-advantages__item
+          +advantageItem({
+            svg: "delivery-truck-1",
+            svgMode: "light-grey",
+            title: "On-time Delivery",
+            text: "All our products — whether we make them or not — are backed by lifetime warranty."
+          })
+        li.c-section-advantages__item
+          +advantageItem({
+            svg: "chat",
+            svgMode: "light-pink",
+            title: "Best in Class Service",
+            text: "All our products — whether we make them or not — are backed by lifetime warranty."
+          })
