add responsive to the section establishment & edit scss file, edited section recommendation & edit scss file, add 4 new fonts and wrote in the file fonts.scss + variables.scss, redacted banner and style

--- a/about-us.pug
+++ b/about-us.pug
@@ -7,7 +7,7 @@ block content
   +header()
   +banner-adventure()
   +section-advantages()
-  //- +section-establishment()
+  +section-establishment()
   +section-about-us()
   +banner-contact-us()
   +footer()
