--- a/index.pug
+++ b/index.pug
@@ -19,6 +19,7 @@ block content
   +header()
   +banner-home-start()
   +section-services
+  +section-recommendation()
   +banner-info-covid()
   +footer()
 
