--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -18,3 +18,27 @@
   font-weight: 700;
   font-style: normal;
 }
+@font-face {
+  font-family: "pacifico-regular";
+  src: url("./assets/fonts/pacifico/Pacifico-Regular.ttf") format("ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "playfairdisplay-regular";
+  src: url("./assets/fonts/playfairdisplay/PlayfairDisplay-Regular.ttf") format("ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "raleway-regular";
+  src: url("./assets/fonts/raleway/Raleway-Regular.ttf") format("ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "roboto-regular";
+  src: url("./assets/fonts/roboto/Roboto-Regular.ttf") format("ttf");
+  font-weight: 400;
+  font-style: normal;
+}
