--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -6,6 +6,7 @@
 @import "./section-about-us";
 @import "./section-advantages";
 @import "./section-establishment";
+@import "./section-recommendation";
 @import "./banner-contact-us";
 @import "./service-card";
 @import "./loading";
