--- a/src/_includes/components/index.pug
+++ b/src/_includes/components/index.pug
@@ -8,6 +8,7 @@ include ./footer
 include ./banner-home-start
 include ./section-services
 include ./service-card
+include ./section-recommendation
 include ./banner-info-covid
 
 //- About-us page
