--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,15 +9,19 @@ $c-white: #fff;
 $c-black: #000;
 
 // Fonts
-$f-sen-bold: "Sen-Bold", sans-serif;
-$f-sen-regular: "Sen-Regular", sans-serif;
+$f-playfairdisplay-reg: "playfairdisplay-regular", sans-serif;
 $f-Source-Pro: "Source-San-Pro_Bold", monospace;
+$f-pacifico-reg: "pacifico-regular", sans-serif;
+$f-raleway-reg: "raleway-regular", sans-serif; 
+$f-roboto-reg: "roboto-regular", sans-serif;
+$f-sen-regular: "Sen-Regular", sans-serif;
+$f-sen-bold: "Sen-Bold", sans-serif;
 
 // Font size
-$fs-1-5em: 24;
 $fs-soc-icon: 30;
-$fs-base: 16;
 $fs-lowRes: 13;
+$fs-1-5em: 24;
+$fs-base: 16;
 $fs-sub: 18;
 $fs-h2: 45;
 $fs-h1: 62;
@@ -30,5 +34,5 @@ $lh-big: 1.5;
 $t-normal: 0.35s cubic-bezier(0.4, 0, 0.2, 1);
 
 // Box Shadow
-$bs-button: 0px 5px 5px 0px rgba($c-darker-grey, 0.1);
 $bs-container: 0px 4px 4px 0px rgba($c-darker-grey, 0.4);
+$bs-button: 0px 5px 5px 0px rgba($c-darker-grey, 0.1);
