--- a/src/_includes/components/banner-contact-us.pug
+++ b/src/_includes/components/banner-contact-us.pug
@@ -1,7 +1,7 @@
 mixin banner-contact-us()
   .c-banner-contact-us
     +banner({
-      style: `background-position: 0px 0px, 80% 50%; background-image: linear-gradient(360deg,rgb(34, 34, 34),rgba(34,34, 34, 0)), url(./assets/images/section-contact-us.jpg)`,
+      style: `background-image: linear-gradient(360deg,rgb(34, 34, 34),rgba(34,34, 34, 0)), url(./assets/images/banner4.jpg)`,
       infoHeader: 'Need Help?',
       linkText: 'Contact Support',
       infoText: "Need help or assistance? Our team is standing by to make sure you get the help you need. Whether you need to adjust an order or delivery details, we're ready to help!"
