--- a/src/_includes/components/footer.pug
+++ b/src/_includes/components/footer.pug
@@ -1,13 +1,13 @@
 mixin footer()
   footer.c-footer
-    .c-footer__wrapper
+    .c-footer__wrapper.wrapper
       .c-footer__top.d-flex.justify-content-between
         .c-footer__logo
-          .c-footer__logo__wrapper.d-flex.align-items-center
+          .c-footer__logo__wrapper.d-flex.align-items-center.w-100.h-100
             +logo()
         .c-footer__social-link
           +social-link({href:"https://twitter.com/?lang=ru", icon: "fa-twitter", target: "_blank"})
           +social-link({href:"https://facebook.com", icon: "fa-facebook", target: "_blank"})
           +social-link({href:"https://www.instagram.com/", icon: "fa-instagram", target: "_blank"})
-      .c-footer__bot
-        p.c-footer__bot__text.text-center Made in Beetroot. &#169;2021.
+      .c-footer__bottom
+        p.c-footer__text.text-center.m-0.p-1 Made in Beetroot. &#169;2021.
