Fixed photo path in section-recommendation

--- a/src/_includes/components/section-recommendation.pug
+++ b/src/_includes/components/section-recommendation.pug
@@ -1,12 +1,12 @@
 mixin section-recommendation()
   section.section-recommendation
     .section-recommendation__wrapper.wrapper.d-flex
-                            
+
       //-Client Photo Only
       //-section-recommendation = White Block
       .section-recommendation__photo.border-dark.border
         +image({
-          src: '../../assets/photos/Arthur.png',
+          src: './assets/photos/Arthur.png',
           alt: 'Arthur Photo'
         })
 
