Added photo to section-recommendation

--- a/src/_includes/components/section-recommendation.pug
+++ b/src/_includes/components/section-recommendation.pug
@@ -6,7 +6,7 @@ mixin section-recommendation()
       //-section-recommendation = White Block
       .section-recommendation__photo.border-dark.border
         +image({
-          src: './assets/photos/Arthur.png',
+          src: './assets/photos/Arthur-young.png',
           alt: 'Arthur Photo'
         })
 
