Fixed photo from section-recommendation

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -26,7 +26,8 @@
 }
 @font-face {
   font-family: "playfairdisplay-regular";
-  src: url("./assets/fonts/playfairdisplay/PlayfairDisplay-Regular.ttf") format("ttf");
+  src: url("./assets/fonts/playfairdisplay/PlayfairDisplay-Regular.ttf")
+    format("ttf");
   font-weight: 400;
   font-style: normal;
 }
