--- a/src/_includes/components/banner-adventure.pug
+++ b/src/_includes/components/banner-adventure.pug
@@ -6,5 +6,6 @@ mixin banner-adventure()
         infoHeader: 'Your Adventure Awaits',
         widthMode: true,
         infoText: "Acme Outdoors has everything you need to help you get started today. Check out our wonderful collection of gear that will make your next adventure complete.",
-        linkText: 'Shop Merch'
+        linkText: 'Shop Merch',
+        displayMode: true
       })
