--- a/src/_includes/components/banner-contact-us.pug
+++ b/src/_includes/components/banner-contact-us.pug
@@ -4,5 +4,6 @@ mixin banner-contact-us()
       style: `background-image: linear-gradient(360deg,rgb(34, 34, 34),rgba(34,34, 34, 0)), url(./assets/images/banner4.jpg)`,
       infoHeader: 'Need Help?',
       linkText: 'Contact Support',
-      infoText: "Need help or assistance? Our team is standing by to make sure you get the help you need. Whether you need to adjust an order or delivery details, we're ready to help!"
+      infoText: "Need help or assistance? Our team is standing by to make sure you get the help you need. Whether you need to adjust an order or delivery details, we're ready to help!",
+      displayMode: true
     })
