Last updates, 22h58, 11OCT2021

--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -11,5 +11,5 @@
 @import "./service-card";
 @import "./loading";
 @import "./banner-contact";
-@import "./section-form.scss";
+@import "./section-form";
 @import "./form-contact";
