--- a/scss/components/_section-recommendation.scss
+++ b/scss/components/_section-recommendation.scss
@@ -19,53 +19,6 @@
         
     }
 
-    //section-recommendation = WHITE BLOCK
-    //use for client photo only
-    &__clrecphoto {
-        margin: 20px 0;
-        z-index: 2;
-        display: flex;
-        width: 30%;
-        border-radius: 10px;
-        //mobile adaptability
-        @include media ('<desktop') {
-            position: absolute;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin: 0;
-            padding: 10px 0;
-            display: flex;
-            margin: 50px 0;
-        }
-    }
-
-    //section-recommendation = BLACK BLOCK
-    //use for recommendation text (incl. Client Name; Project & Recommendation Date; Recommendation Text)
-    &__clrecmain {
-        padding: 85px 50px 85px 225px;
-        margin-left: -115px;
-        // z-index: 1;
-        max-width: 800px;
-        width: 100%;
-        border-radius: 10px;
-        background-color: $c-black;
-        color: $c-white;
-        //mobile adaptability
-        @include media ('<desktop') {
-            margin-left: 0;
-            padding: 200px 31px;
-            padding-bottom: 63px;
-         }
-    }
-
-    //section-recommendation = Client Name
-    //adjusts client name display settings
-    &__recommendationclient {
-        font-family: $f-sen-bold;
-        size: 45px;
-    }
-
     //section-recommendation = Project & Recommendation Date 
     //adjusts project name and recommendation date display settings
     &__recommendationdata {
@@ -106,6 +59,7 @@
   //section-recommendation = WHITE BLOCK
   //use for client photo only
   &__photo {
+    height: 100%;
     border-radius: 10px;
     overflow: hidden;
     margin: 35px 0;
@@ -147,4 +101,4 @@
     font-family: $f-sen-bold;
     font-size: em($fs-h2);
   }
-}
+};
