--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -69,13 +69,17 @@
   &__sub-title {
     font-family: $f-sen-regular;
     font-size: em($fs-sub);
+    display: inline-block;
     line-height: $lh-big;
     margin-bottom: 30px;
+
+    &--display-none {
+      display: none;
+    }
   }
 
   &__img {
-    @include size(225);
-    overflow: hidden;
+    @include size(200);
 
     @include media ('<tablet') {
       margin: 10px auto;
