--- a/src/_includes/elements/link.pug
+++ b/src/_includes/elements/link.pug
@@ -6,10 +6,11 @@ mixin link(args)
   - let lightText = args.lightText || false;
   - let bannerStyleRed = args.bannerStyleRed || false;
   - let bannerStyle = args.bannerStyle || false;
+  - let linkMode = args.linkMode || false;
   - let endIcon = args.endIcon || false;
-  - let classList = `${(button ? 'e-link--button' + ' ' + (buttonColor ? 'e-link--button-' + buttonColor : '') : '') + ' ' + (lightText ? 'e-link--lighter-text' : '') + ' ' + (bannerStyle ? 'e-link--banner-style' : '') + ' ' + (bannerStyle ? 'e-link--banner-style' + ' ' + (bannerStyleRed ? 'e-link--banner-style-red' : '') : '')}`
+  - let classList = `${(button ? 'e-link--button' + ' ' + (buttonColor ? 'e-link--button-' + buttonColor : '') : '') + ' ' + (lightText ? 'e-link--lighter-text' : '') + ' ' + (bannerStyle ? 'e-link--banner-style' : '') + ' ' + (bannerStyle ? 'e-link--banner-style' + ' ' + (bannerStyleRed ? 'e-link--banner-style-red' : '') : '') + ' ' + (linkMode ? 'e-link--display-none' : '')}`
 
-  a.e-link.d-inline-block(href=href class=classList)
+  a.e-link(href=href class=classList)
     span=text 
 
     //- Arrow svg
