--- a/scss/elements/_link.scss
+++ b/scss/elements/_link.scss
@@ -1,16 +1,18 @@
 .e-link {
+  // width: 100%;
+  // height: 100%;
   transition: $t-normal;
   display: inline-block;
 
   &--lighter-text {
-    padding: 5px 12px;
     color: $c-white;
+    padding: 5px 12px;
 
     &:hover {
       border-radius: 5px;
       background-color: $c-darker-grey;
-      transition: $t-normal;
       color: $c-white;
+      transition: $t-normal;
     }
   }
 
@@ -37,18 +39,14 @@
   }
 
   &--button-red {
+    color: $c-white;
     background-color: $c-light-red;
     border-radius: 5px;
     padding: 5px 25px;
     font-size: em(14);
-    color: $c-white;
 
     &:hover {
       background-color: $c-darker-grey;
     }
-  }
-
-  &--display-none {
-    display: none;
   }
 }
