--- a/src/_includes/components/section-advantages.pug
+++ b/src/_includes/components/section-advantages.pug
@@ -8,26 +8,30 @@ mixin section-advantages()
         li.c-section-advantages__item
           +advantageItem({
             title: "Lifetime Warranty",
-            text: "All our products — whether we make them or not — are backed by lifetime warranty."
+            text: "All our products — whether we make them or not — are backed by lifetime warranty.",
+            style: `font-size: 30px; font-family: "playfairdisplay-regular", sans-serif;`
           })
         li.c-section-advantages__item
           +advantageItem({
             svg: "shopping-cart",
             svgMode: "red",
             title: "Shopping Experience",
-            text: "All our products — whether we make them or not — are backed by lifetime warranty."
+            text: "All our products — whether we make them or not — are backed by lifetime warranty.",
+            style: `font-size: 32px; font-family: "pacifico-regular", sans-serif;`
           })
         li.c-section-advantages__item
           +advantageItem({
             svg: "delivery-truck-1",
             svgMode: "light-grey",
             title: "On-time Delivery",
-            text: "All our products — whether we make them or not — are backed by lifetime warranty."
+            text: "All our products — whether we make them or not — are backed by lifetime warranty.",
+            style: `font-size: 34px; font-family: "raleway-regular", sans-serif;`
           })
         li.c-section-advantages__item
           +advantageItem({
             svg: "chat",
             svgMode: "light-pink",
             title: "Best in Class Service",
-            text: "All our products — whether we make them or not — are backed by lifetime warranty."
+            text: "All our products — whether we make them or not — are backed by lifetime warranty.",
+            style: `font-size: 28px; font-family: "roboto-regular", sans-serif;`
           })
