--- a/src/_includes/components/section-recommendation.pug
+++ b/src/_includes/components/section-recommendation.pug
@@ -16,9 +16,8 @@ mixin section-recommendation()
       .section-recommendation__info.bg-dark
         h3.section-recommendation__client SOLODKUI Artur
         br          
-        a(href='https://beetroot.academy/' data-tooltip='Click to go to the project').section-recommendation__data.simptip-position-right.simptip-success
+        a(href='https://beetroot.academy/' data-tooltip='Click to go to the project').simptip-position-right.simptip-success
           span WEB Site: https://solodkui.academy/
-
         p.section-recommendation__data Period: 2021
         br
         p.section-recommendation__text
