--- a/src/_includes/elements/advantage-item.pug
+++ b/src/_includes/elements/advantage-item.pug
@@ -3,11 +3,12 @@ mixin advantageItem(args={})
   - let svgMode = args.svgMode || 'black';
   - let title = args.title || 'Default title';
   - let text = args.text || 'Default text';
+  - let style = args.style || false;
 
   .e-advantage-item
     .e-advantage-item__wrapper 
       .e-advantage-item__icon 
         svg.icon.e-advantage-item__svg(class=`e-advantage-item__svg--${svgMode}`)
           use(xlink:href=`#icon-${svg}`)
-      h4.e-advantage-item__title= title
+      h4.e-advantage-item__title(style=style)= title
       p.e-advantage-item__text= text
