--- a/src/_includes/components/banner.pug
+++ b/src/_includes/components/banner.pug
@@ -2,17 +2,21 @@ mixin banner(args={})
   - let infoHeader = args.infoHeader || 'default text';
   - let infoText = args.infoText || 'default text';
   - let linkText = args.linkText || 'default text';
+  - let displaySubTitleMode = args.displaySubTitleMode || false;
+  - let displayMode = args.displayMode || false;
   - let rightMode = args.rightMode || false;
   - let widthMode = args.widthMode || false;
   - let colorMode = args.colorMode || false;
+  - let linkNone = args.linkNone || false;
+  - let logoMode = args.logoMode || false;
   - let style = args.style || false;
   - let src = args.src || false;
 
   .c-banner.d-flex(style=style)
-    .c-banner__wrapper.wrapper.d-flex(class=`${(rightMode ? 'c-banner__wrapper--width-mode text-end justify-content-end' : '') + ' ' + (widthMode ? 'c-banner__wrapper--width-mode' : '')}`)
+    .c-banner__wrapper.wrapper.d-flex(class=`${(rightMode ? 'c-banner__wrapper--width-mode text-end justify-content-end' : '') + ' ' + (widthMode ? 'c-banner__wrapper--width-mode' : '') + ' ' + (logoMode ? 'c-banner__wrapper--logo-mode' : '')}`)
       .c-banner__info.w-100
         h2.c-banner__title.d-inline-block=infoHeader
-        h4.c-banner__sub-title.d-inline-block=infoText
+        h4.c-banner__sub-title(class=`${(displaySubTitleMode ? 'c-banner__sub-title--display-none' : ' ')}`)=infoText
         +link({
           href: './index.html',
           lightText: true,
