--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -2,16 +2,20 @@
   @include backgroundCoverCenter;
   min-height: 550px;
   
-  @include media ('<phone') {
-    background-position: 0px 0px, 80% 50%;
-  }
-  
   &__wrapper {
     margin: 130px auto 0 auto;
 
     @include media ('<phone'){
       margin: 230px auto 50px auto;
       padding: 0 20px;
+    }
+
+    &--logo-mode {
+      justify-content: space-between;
+
+      @include media ('<tablet') {
+        flex-direction: column;
+      }
     }
 
     &--width-mode {
@@ -61,7 +65,28 @@
   &__sub-title {
     font-family: $f-sen-regular;
     font-size: em($fs-sub);
+    display: inline-block;
     line-height: $lh-big;
     margin-bottom: 30px;
+
+    &--display-none {
+      display: none;
+    }
+  }
+
+  &__img {
+    @include size(200);
+
+    @include media ('<tablet') {
+      margin: 10px auto;
+    }
+
+    @include media ('<phone') {
+      display: none;
+    }
+
+    &--display-none {
+      display: none;
+    }
   }
 }
