--- a/src/_includes/elements/logo.pug
+++ b/src/_includes/elements/logo.pug
@@ -4,4 +4,6 @@ mixin logo(args)
     .e-logo__wrapper
       svg(class="icon icon-logo").e-logo__svg
         use(xlink:href="#icon-logo")
+        use(xlink:href="#icon-logo-dots")
+        
       span.e-logo__text BEETROOTERS 
