--- a/scss/components/_section-services.scss
+++ b/scss/components/_section-services.scss
@@ -52,7 +52,7 @@
     }
   }
   // content
-  .c-service-content {
+  &__cards {
     width: 100%;
     &__wrapper {
       justify-content: space-between;
@@ -62,17 +62,6 @@
       @include media("<desktop") {
         flex-direction: column;
         align-items: center;
-      }
-    }
-    &__item {
-      width: 100%;
-      padding: 0 10px;
-      max-width: 320px;
-
-      @include media("<desktop") {
-        width: 100%;
-        margin-bottom: 40px;
-        max-width: 700px;
       }
     }
   }
