--- a/scss/elements/_logo.scss
+++ b/scss/elements/_logo.scss
@@ -9,6 +9,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    &:hover>svg{
+      animation: rotate 20s infinite linear;
+    }
   }
 
   &__text {
@@ -21,6 +25,7 @@
     min-width: 75px;
     width: 100%;
     height: 100%;
-    animation: rotate 20s infinite linear;
+    animation: spin-reverse 300ms; 
   }
+
 }
