--- a/src/_includes/components/index.pug
+++ b/src/_includes/components/index.pug
@@ -1,15 +1,24 @@
 include ./loading
 include ./header
-include ./footer
 include ./navigation
 include ./banner
+include ./footer
+
+//- Home page
 include ./banner-home-start
 include ./section-services
-include ./section-about-us
-include ./section-establishment
-include ./banner-contact-us
-include ./section-advantages
 include ./service-card
+include ./section-recommendation
 include ./banner-info-covid
-include ./banner-adventure
 
+//- About-us page
+include ./banner-adventure
+include ./section-advantages
+include ./section-establishment
+include ./section-about-us
+include ./banner-contact-us
+
+//- Contact page
+include ./banner-contact
+include ./section-form
+include ./form-contact
