--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,14 +1,14 @@
 @font-face {
   font-family: "Sen-Bold";
-  src: url("./assets/fonts/Sen/Sen-Bold.woff2") format("woff2"),
-    url("./assets/fonts/Sen/Sen-Bold.woff") format("woff");
+  src: url("./assets/fonts/sen/Sen-Bold.woff2") format("woff2"),
+    url("./assets/fonts/sen/Sen-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
   font-family: "Sen-Regular";
-  src: url("./assets/fonts/Sen/Sen-Regular.woff2") format("woff2"),
-    url("./assets/fonts/Sen/Sen-Regular.woff") format("woff");
+  src: url("./assets/fonts/sen/Sen-Regular.woff2") format("woff2"),
+    url("./assets/fonts/sen/Sen-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
@@ -18,4 +18,28 @@
   font-weight: 700;
   font-style: normal;
 }
-
+@font-face {
+  font-family: "pacifico-regular";
+  src: url("./assets/fonts/pacifico/Pacifico-Regular.ttf") format("ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "playfairdisplay-regular";
+  src: url("./assets/fonts/playfairdisplay/PlayfairDisplay-Regular.ttf")
+    format("ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "raleway-regular";
+  src: url("./assets/fonts/raleway/Raleway-Regular.ttf") format("ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "roboto-regular";
+  src: url("./assets/fonts/roboto/Roboto-Regular.ttf") format("ttf");
+  font-weight: 400;
+  font-style: normal;
+}
