--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -6,5 +6,9 @@
 @import "./section-about-us";
 @import "./section-advantages";
 @import "./section-establishment";
+@import "./section-recommendation";
 @import "./service-card";
 @import "./loading";
+@import "./banner-contact";
+@import "./section-form";
+@import "./form-contact";
