--- a/scss/elements/_index.scss
+++ b/scss/elements/_index.scss
@@ -2,7 +2,7 @@
 @import "./icon";
 @import "./link";
 @import "./burger-menu";
-@import "./button";
 @import "./social-link";
-@import './photocard';
-@import './form-pop-up';
+@import "./photocard";
+@import "./form-pop-up";
+@import "./advantage-item";
